@@ -108,22 +108,22 @@ sub system_update {
 	my $rrd = $config->{base_lib} . $package . ".rrd";
 	my $system = $config->{system};
 
-	my $load1;
-	my $load5;
-	my $load15;
-	my $nproc;
-	my $npslp;
-	my $nprun;
-	my $npwio;
-	my $npzom;
-	my $npstp;
-	my $npswp;
-	my $mtotl;
-	my $mbuff;
-	my $mcach;
-	my $mfree;
-	my $macti;
-	my $minac;
+	my $load1 = 0;
+	my $load5 = 0;
+	my $load15 = 0;
+	my $nproc = 0;
+	my $npslp = 0;
+	my $nprun = 0;
+	my $npwio = 0;
+	my $npzom = 0;
+	my $npstp = 0;
+	my $npswp = 0;
+	my $mtotl = 0;
+	my $mbuff = 0;
+	my $mcach = 0;
+	my $mfree = 0;
+	my $macti = 0;
+	my $minac = 0;
 	my $val01 = 0;
 	my $val02 = 0;
 	my $val03 = 0;
